--- a/css/main.css
+++ b/css/main.css
@@ -120,6 +120,10 @@ input[type=submit] {
   margin-top: 10px;
 }
 
+ul#sip-domains h2 {
+  font-size: 13px !important;
+}
+
 ul#sip-domains h2.error {
   color: #FF0000;
 }
